--- a/waf/modsecurity.conf
+++ b/waf/modsecurity.conf
@@ -4,7 +4,23 @@
 # only to start with, because that minimises the chances of post-installation
 # disruption.
 #
+
+
+##################################################################################################################
+##Default | Disable this parameter for protecting webapps
 SecRuleEngine DetectionOnly
+##################################################################################################################
+##Enable these parameters for protecting webapps
+
+##Enable security protection rule engine
+#SecRuleEngine On
+
+##Configure default action as “block” for any request matching with the rules
+#SecDefaultAction "phase:1,deny,log"
+
+##################################################################################################################
+
+
 
 
 # -- Request body handling ---------------------------------------------------
