--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,7 @@ services:
         build: waf
         ports:
             - "80:80"
-    app:
+    dsvw:
         build: dsvw
-	command: python dsvw.py runserver 0.0.0.0:80
         ports:
-            - "80:80"
-	depends_on:
-            - waf
+            - "1234:1234"
