--- a/waf/nginx.conf
+++ b/waf/nginx.conf
@@ -49,8 +49,8 @@ http {
         #    index  index.html index.htm;
         #}
 
-		location / {
-			proxy_pass http://app/;
+		location /dsvw {
+			proxy_pass http://192.168.99.100:1234/;
 			proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
 			proxy_redirect off;
 			proxy_buffering off;
